updating some alignments for cover blocks, fixing form label styles in search block

--- a/assets/styles/custom-editor-style.scss
+++ b/assets/styles/custom-editor-style.scss
@@ -56,7 +56,7 @@ body.post-type-page .is-sidebar-opened .block-editor-editor-skeleton__content .e
 }
 
 @media only screen and (min-width: 768px) {
-    .editor-styles-wrapper .wp-block {
+    .editor-styles-wrapper .wp-block:not(.alignwide):not(.alignfull) {
         max-width: 960px;
     }
 
@@ -78,7 +78,7 @@ body.post-type-page .is-sidebar-opened .block-editor-editor-skeleton__content .e
     body.post-type-page .is-root-container>.block-list-appender.wp-block,
     body.post-type-page:not(.folded) .edit-post-layout.is-sidebar-opened .wp-block[data-type="core/paragraph"],
     body.post-type-page:not(.folded) .edit-post-layout.is-sidebar-opened .wp-block[data-type="core/paragraph"][data-empty=true],
-    body.post-type-page .is-sidebar-opened .editor-styles-wrapper .is-root-container>.wp-block {
+    body.post-type-page .is-sidebar-opened .editor-styles-wrapper .is-root-container>.wp-block:not(.alignwide):not(.alignfull) {
         max-width: 1140px;
     }
 
@@ -96,7 +96,7 @@ body.post-type-page .is-sidebar-opened .block-editor-editor-skeleton__content .e
 }
 
 @media only screen and (min-width: 1200px) {
-    .editor-styles-wrapper .wp-block {
+    .editor-styles-wrapper .wp-block:not(.alignwide):not(.alignfull) {
         max-width: 1140px;
         margin-right: auto;
         margin-left: auto;
@@ -138,8 +138,35 @@ body.post-type-page .is-sidebar-opened .block-editor-editor-skeleton__content .e
         max-width: 100vw;
     }
 
+    .post-type-post .editor-styles-wrapper .is-root-container .alignfull>.alignwide,
+    .post-type-page .editor-styles-wrapper .is-root-container .alignfull>.alignwide {
+        width: 120%;
+        max-width: 1368px;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+    }
+
     .post-type-page .editor-styles-wrapper .is-root-container>.wp-block[data-align="wide"] {
         max-width: 1368px;
+    }
+
+    body.post-type-page .editor-styles-wrapper .is-root-container>.wp-block.wp-block-cover.container,
+    body.post-type-post .editor-styles-wrapper .is-root-container>.wp-block.wp-block-cover.container {
+        width: 1140px;
+        max-width: 100vw;
+    }
+
+    body.post-type-page .editor-styles-wrapper .is-root-container>.wp-block.wp-block-cover.container.alignwide,
+    body.post-type-post .editor-styles-wrapper .is-root-container>.wp-block.wp-block-cover.container.aignwide {
+        width: 1368px;
+        max-width: 100vw;
+    }
+
+    body.post-type-page .is-sidebar-opened .editor-styles-wrapper .is-root-container>.wp-block.wp-block-cover.alignnarrow,
+    body.post-type-post .is-sidebar-opened .editor-styles-wrapper .is-root-container>.wp-block.wp-block-cover.aignnarrow {
+        width: 960px;
+        max-width: 100vw;
     }
 
     .post-type-page .is-sidebar-opened .editor-styles-wrapper .is-root-container>.wp-block[data-align="full"],
@@ -148,6 +175,11 @@ body.post-type-page .is-sidebar-opened .block-editor-editor-skeleton__content .e
         width: 100%;
         margin-left: 0;
         margin-right: 0;
+    }
+
+    body.post-type-page .is-sidebar-opened .editor-styles-wrapper .is-root-container>.wp-block.wp-block-cover.alignfull,
+    body.post-type-post .is-sidebar-opened .editor-styles-wrapper .is-root-container>.wp-block.wp-block-cover.aignfull {
+        max-width: 100vw;
     }
 
     .edit-post-layout:not(.is-sidebar-opened) .editor-styles-wrapper .block-editor-block-list__layout {
@@ -678,7 +710,7 @@ html :where(.editor-styles-wrapper) kbd {
 
 .editor-styles-wrapper .h6.c9-txl,
 .editor-styles-wrapper h6.c9-txl {
-    font-size:4.3rem;
+    font-size: 4.3rem;
 }
 
 p.wp-block-subhead,
